ingress-basic.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-apigateway
spec:
  backend:
    serviceName: products-service
    servicePort: 8080
